using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class Acessibilidade
	{
		private int tamanhoFonte;

		private boolean altoContraste;

		private Aluno aluno;

		///  
		public void salvar()
		{

		}

	}

}

