using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class Admin
	{
		private Usuario usuario;

		private Usuario usuario;

		///  
		public void gerenciarAcesso()
		{

		}

	}

}

