using 2. Class Diagram Nex_TI;
using System.Collections.Generic;

namespace 2. Class Diagram Nex_TI
{
	public class Aluno : Usuario
	{
		private int pontos;

		private int moedas;

		private float progresso;

		private ICollection<Duvidas> duvidas;

		private Acessibilidade acessibilidade;

		private Usuario usuario;

		private ICollection<Flashcards> flashcards;

		private Simulado simulado;

		///  
		public void estudarFlashcards()
		{

		}

		///  
		public void realizarSimulado()
		{

		}

		///  
		public void visualizarDesempenho()
		{

		}

		///  
		public void definirFaseInicial(float nota)
		{

		}

		///  
		public void criaCarta()
		{

		}

	}

}

