using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class Duvidas
	{
		private string descricao;

		private string pergunta;

		private string resposta;

		private Tutor tutor;

		private Aluno aluno;

	}

}

