using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class Modulos
	{
		private string nomeModulo;

		private boolean bloqueada;

		private int id;

		private string nome;

		private Flashcards flashcards;

		///  
		public void desbloquear()
		{

		}

	}

}

