using 2. Class Diagram Nex_TI;
using System.Collections.Generic;

namespace 2. Class Diagram Nex_TI
{
	public class Simulado
	{
		private int tempoRestante;

		private float nota;

		private int id;

		private date dataRealizacao;

		private ICollection<Questao> questao;

		private Aluno aluno;

		///  
		public void iniciarTeste()
		{

		}

	}

}

