using System.Collections.Generic;
using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class Tutor
	{
		public int acompanharDesempenho ();

		public int gerenciarConteudo();

		private ICollection<Duvidas> duvidas;

		private Usuario usuario;

		///  
		private void ResponderDuvida()
		{

		}

	}

}

