using 2. Class Diagram Nex_TI;

namespace 2. Class Diagram Nex_TI
{
	public class Usuario
	{
		private int id;

		private string nome;

		private string email;

		private string senha;

		private Tutor tutor;

		private Aluno aluno;

		private Admin admin;

		private Admin admin;

		///  
		public void login()
		{

		}

	}

}

