@startuml
' --- Configurações Estilo Astah ---
skinparam backgroundColor white
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 60

skinparam class {
    BackgroundColor #FFFEE1
    BorderColor #000000
    ArrowColor #000000
}

center header
<b>Sistema Nex_TI - Modelo de Classes Global</b>
endheader

abstract class Usuario <<Entidade>> {
    -id: int
    -nome: string
    -email: string
    -senha: string
    +login()
}

class Aluno <<Entidade>> {
    -pontos: int
    -moedas: int
    -progresso: float
    +estudarFlashcard()
    +realizarSimulado()
    +visualizarProgresso()
}

class Tutor <<Entidade>> {
    +acompanharDesempenho()
    +gerenciarConteudo()
}

class Admin <<Entidade>> {
    +gerenciarAcesso()
}

Usuario <|-- Aluno
Usuario <|-- Tutor
Usuario <|-- Admin

class Modulo <<Entidade>> {
    -id: int
    -nome: string
}

class Fase <<Entidade>> {
    -id: int
    -nome: string
}

class Flashcard_SM2 <<Entidade>> {
    -id: int
    -pergunta: string
    -resposta: string
    -dica: string
    -dataProximaRevisao: date
    -nivelDificuldade: int
}

Modulo "1" *-- "0..*" Fase : gerencia
Fase "1" -- "1" Flashcard_SM2 : contém

class Simulado <<Entidade>> {
    -id: int
    -nota: float
    -dataRealizacao: date
}

Aluno "1" -- "*" Simulado : realiza
Aluno "1" -- "1" Modulo : possui

class Duvida <<Entidade>> {
    -descricao: string
}

Aluno "1" -- "*" Duvida : abre
Tutor "1" -- "*" Duvida : responde

class Agente_IA <<Control>> {
    +responderDuvida(duvida: Duvida): boolean
}

Duvida "*" -- "1" Agente_IA : analisa preliminarmente

class Acessibilidade <<Entidade>> {
    -tamanhoFonte: int
    -altoContraste: boolean
}

Aluno "1" -- "1" Acessibilidade : configura

@enduml

